@@ -119,6 +119,14 @@
 			<scope>test</scope>
 		</dependency>
 		
+	<!-- 	<dependency>
+			<groupId>org.subethamail</groupId>
+			<artifactId>subethasmtp</artifactId>
+			<version>3.1.3</version>
+			<scope>test</scope>
+		</dependency> -->
+            
+
 
 		<dependency>
 			<groupId>org.alfresco.sdk</groupId>
@@ -158,6 +166,18 @@
 	</properties>
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<excludes>
+						 <exclude>fr/becpg/repo/web/scripts/**/**</exclude>
+						 <exclude>fr/becpg/repo/olap/OlapServiceTest.java</exclude>
+					</excludes> 
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
@@ -271,5 +291,26 @@
 			</testResource>
 		</testResources>
 	</build>
+	<profiles>
+		<profile>
+		  <id>test-webscripts</id>
+		  <build>
+		   <plugins>
+		   	<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12</version>
+				<configuration>
+					<includes>
+						 <include>fr/becpg/repo/web/scripts/**/*Test.java</include>
+					</includes> 
+					<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
+		   </plugins>
+		  </build>
+		</profile>
+	
+	</profiles>
 
 </project>
